Изменен относительный путь изображений в footer и kaufman

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: -210px;
   top: 0;
-  background: url('/images/kaufman-triangle.svg');
+  background: url('../../../images/kaufman-triangle.svg');
   width: 877px;
   height: 877px;
   background-size: contain;
