дописаны вендорные префиксы

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,6 +5,10 @@
   padding-bottom: 40px;
   color: white;
   box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
