--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,9 @@
 .cards {
   width: 920px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0 auto;
 }
