--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,7 +6,11 @@
   background-color: #f2f2f2;
   color: #000;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   z-index: 1;
   overflow: hidden;
