--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,6 +1,10 @@
 .oakley {
   background-color: #f2f2f2;
   padding-top: 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
